[workspace]
resolver = "3"
members = [
    "drivers/d435i",
    "drivers/motor/amci",
    "drivers/motor/common",
    "drivers/motor/micronix",
    "drivers/motor/motorsim",
    "drivers/motor/attocube",
    "drivers/motor/pijena",
    "drivers/motor/faulhaber",
    "drivers/motor/kohzu",
    "drivers/motor/mclennan",
    "drivers/motor/smartmotor",
    "drivers/motor/acstech80",
    "drivers/motor/oriel",
    "drivers/motor/thorlabs",
    "drivers/motor/npoint",
    "drivers/motor/micromo",
    "drivers/motor/smaract",
    "drivers/motor/parker",
    "drivers/motor/aerotech",
    "drivers/motor/ims",
    "drivers/motor/acsmotion",
    "drivers/motor/micos",
    "drivers/motor/oms-asyn",
    "drivers/motor/phytron",
    "drivers/motor/newport",
    "drivers/motor/pi-gcs2",
    "drivers/motor/pi",
    "drivers/motor/acs",
    "drivers/twincat-ads",
    "drivers/meascomp/meascomp",
    "drivers/meascomp/uldaq-sys",
    "drivers/meascomp/usb-2408",
    "drivers/meascomp/usb-ctr",
    "iocs/d435i-ioc",
    "iocs/motor/ag-uc-ioc",
    "iocs/motor/agap-conex-ioc",
    "iocs/motor/conex-ioc",
    "iocs/motor/esp300-ioc",
    "iocs/motor/hxp-ioc",
    "iocs/motor/mm3000-ioc",
    "iocs/motor/mm4000-ioc",
    "iocs/motor/pm500-ioc",
    "iocs/motor/micronix-ioc",
    "iocs/motor/motorsim-ioc",
    "iocs/motor/attocube-ioc",
    "iocs/motor/pijena-ioc",
    "iocs/motor/faulhaber-ioc",
    "iocs/motor/kohzu-ioc",
    "iocs/motor/mclennan-ioc",
    "iocs/motor/smartmotor-ioc",
    "iocs/motor/acstech80-ioc",
    "iocs/motor/oriel-ioc",
    "iocs/motor/thorlabs-ioc",
    "iocs/motor/npoint-ioc",
    "iocs/motor/micromo-ioc",
    "iocs/motor/smaract-ioc",
    "iocs/motor/parker-ioc",
    "iocs/motor/aerotech-ioc",
    "iocs/motor/ims-ioc",
    "iocs/motor/acsmotion-ioc",
    "iocs/motor/amci-ioc",
    "iocs/motor/micos-ioc",
    "iocs/motor/oms-asyn-ioc",
    "iocs/motor/phytron-ioc",
    "iocs/motor/newfocus-ioc",
    "iocs/motor/smc100-ioc",
    "iocs/motor/xps-ioc",
    "iocs/motor/pigcs2-ioc",
    "iocs/motor/pi-ioc",
    "iocs/motor/mcb4b-ioc",
    "iocs/twincat-ads-ioc",
    "iocs/usb-2408-ioc",
    "iocs/usb-ctr-ioc",
]

# Single source of truth for the epics-rs crate versions every driver/IOC
# consumes. Bump here once per epics-rs release instead of editing each crate.
# Per-crate feature sets stay in the crates (features are additive over these).
[workspace.dependencies]
# epics-rs upstream main (user directive 2026-07-13): PRs #18-#24 are merged
# but the v0.24.0 release is held, so ports baseline on the published repo's
# main branch. Cargo.lock pins the exact rev — reproducible until a
# deliberate `cargo update`; switch back to a version once 0.24.0 ships.
epics-rs = { git = "https://github.com/epics-rs/epics-rs.git", branch = "main" }
asyn-rs = { git = "https://github.com/epics-rs/epics-rs.git", branch = "main" }
ad-core-rs = { git = "https://github.com/epics-rs/epics-rs.git", branch = "main" }
ad-plugins-rs = { git = "https://github.com/epics-rs/epics-rs.git", branch = "main" }
# Modbus TCP/RTU/ASCII driver (drvModbusAsyn port).
modbus-rs = { git = "https://github.com/epics-rs/epics-rs.git", branch = "main", package = "epics-modbus-rs" }
