[workspace]
resolver = "3"
members = [
    "drivers/ad/simdetector",
    "drivers/ad/csimdetector",
    "drivers/ad/std-arrays-driver",
    "drivers/ad/pva-driver",
    "drivers/ad/url",
    "drivers/ad/pilatus",
    "drivers/ad/marccd",
    "drivers/ad/mar345",
    "drivers/ad/eiger",
    "drivers/ad/mythen",
    "drivers/ad/timepix3",
    "drivers/ad/specs-analyser",
    "drivers/d435i",
    "drivers/ad/merlin",
    "drivers/ad/photonii",
    "drivers/ad/psl",
    "drivers/ad/pixirad",
    "drivers/ad/bruker",
    "drivers/motor/amci",
    "drivers/motor/common",
    "drivers/motor/micronix",
    "drivers/motor/motorsim",
    "drivers/motor/attocube",
    "drivers/motor/pijena",
    "drivers/motor/faulhaber",
    "drivers/motor/kohzu",
    "drivers/motor/mclennan",
    "drivers/motor/smartmotor",
    "drivers/motor/acstech80",
    "drivers/motor/oriel",
    "drivers/motor/thorlabs",
    "drivers/motor/npoint",
    "drivers/motor/micromo",
    "drivers/motor/smaract",
    "drivers/motor/parker",
    "drivers/motor/aerotech",
    "drivers/motor/ims",
    "drivers/motor/acsmotion",
    "drivers/motor/micos",
    "drivers/motor/oms-asyn",
    "drivers/motor/phytron",
    "drivers/motor/newport",
    "drivers/motor/pi-gcs2",
    "drivers/motor/pi",
    "drivers/motor/acs",
    "drivers/vac",
    "drivers/quadem",
    "drivers/motor/pmac",
    "drivers/twincat-ads",
    "drivers/meascomp/meascomp",
    "drivers/meascomp/uldaq-sys",
    "drivers/meascomp/usb-2408",
    "drivers/meascomp/usb-ctr",
    "iocs/ad/simdetector-ioc",
    "iocs/ad/csimdetector-ioc",
    "iocs/ad/std-arrays-driver-ioc",
    "iocs/ad/pva-driver-ioc",
    "iocs/ad/url-ioc",
    "iocs/ad/pilatus-ioc",
    "iocs/ad/marccd-ioc",
    "iocs/ad/mar345-ioc",
    "drivers/delaygen",
    "drivers/love",
    "drivers/scaler974",
    "drivers/syringepump",
    "drivers/microepsilon",
    "iocs/ad/eiger-ioc",
    "iocs/ad/mythen-ioc",
    "iocs/ad/timepix3-ioc",
    "drivers/ether-ip",
    "drivers/ur-robot",
    "drivers/ip",
    "drivers/yokogawa-gm10",
    "drivers/yokogawa-mw100",
    "drivers/opcua",
    "drivers/mca",
    "drivers/mca-amptek",
    "iocs/ad/specs-analyser-ioc",
    "iocs/d435i-ioc",
    "iocs/ad/merlin-ioc",
    "iocs/ad/photonii-ioc",
    "iocs/ad/psl-ioc",
    "iocs/ad/pixirad-ioc",
    "iocs/ad/bruker-ioc",
    "iocs/ether-ip/ether-ip-ioc",
    "iocs/ur-robot/ur-robot-ioc",
    "iocs/ip/ip-ioc",
    "iocs/quadem/tetramm-ioc",
    "iocs/quadem/ah401-ioc",
    "iocs/quadem/ah501-ioc",
    "iocs/quadem/pcr4-ioc",
    "iocs/quadem/nsls-em-ioc",
    "iocs/quadem/t4u-em-ioc",
    "iocs/quadem/t4u-direct-em-ioc",
    "iocs/quadem/fx4-ioc",
    "iocs/motor/ag-uc-ioc",
    "iocs/motor/agap-conex-ioc",
    "iocs/motor/conex-ioc",
    "iocs/motor/esp300-ioc",
    "iocs/motor/hxp-ioc",
    "iocs/motor/mm3000-ioc",
    "iocs/motor/mm4000-ioc",
    "iocs/motor/pm500-ioc",
    "iocs/motor/micronix-ioc",
    "iocs/motor/motorsim-ioc",
    "iocs/motor/attocube-ioc",
    "iocs/motor/pijena-ioc",
    "iocs/motor/pmac-ioc",
    "iocs/motor/faulhaber-ioc",
    "iocs/motor/kohzu-ioc",
    "iocs/motor/mclennan-ioc",
    "iocs/motor/smartmotor-ioc",
    "iocs/motor/acstech80-ioc",
    "iocs/motor/oriel-ioc",
    "iocs/motor/thorlabs-ioc",
    "iocs/motor/npoint-ioc",
    "iocs/motor/micromo-ioc",
    "iocs/motor/smaract-ioc",
    "iocs/motor/parker-ioc",
    "iocs/motor/aerotech-ioc",
    "iocs/motor/ims-ioc",
    "iocs/motor/acsmotion-ioc",
    "iocs/motor/amci-ioc",
    "iocs/motor/micos-ioc",
    "iocs/motor/oms-asyn-ioc",
    "iocs/motor/phytron-ioc",
    "iocs/motor/newfocus-ioc",
    "iocs/motor/smc100-ioc",
    "iocs/motor/xps-ioc",
    "iocs/motor/pigcs2-ioc",
    "iocs/motor/pi-ioc",
    "iocs/motor/mcb4b-ioc",
    "iocs/twincat-ads-ioc",
    "iocs/usb-2408-ioc",
    "iocs/usb-ctr-ioc",
    "iocs/vac/vacsen-ioc",
    "iocs/vac/digitel-ioc",
    "iocs/delaygen-ioc",
    "iocs/love-ioc",
    "iocs/scaler974-ioc",
    "iocs/syringepump-ioc",
    "iocs/microepsilon-ioc",
    "iocs/yokogawa-gm10-ioc",
    "iocs/yokogawa-mw100-ioc",
    "iocs/opcua-ioc",
    "iocs/mca-ioc",
    "iocs/mca-amptek-ioc",
]

# Single source of truth for the epics-rs crate versions every driver/IOC
# consumes. Bump here once per epics-rs release instead of editing each crate.
# Per-crate feature sets stay in the crates (features are additive over these).
[workspace.dependencies]
# epics-rs 0.24.0 (released; user directive 2026-07-18): the git-main baseline
# that carried PRs #18-#29 is now published as v0.24.0 on crates.io, so ports
# consume the released version instead of the main branch. Cargo.lock pins the
# exact patch release.
epics-rs = "0.24.0"
asyn-rs = "0.24.0"
ad-core-rs = "0.24.0"
ad-plugins-rs = "0.24.0"
# Modbus TCP/RTU/ASCII driver (drvModbusAsyn port).
modbus-rs = { version = "0.24.0", package = "epics-modbus-rs" }
# mcaRecord + soft device support (epics-modules/mca's mcaRecord.c). No
# epics-rs "mca" feature exists yet, so drivers/mca depends on this
# standalone published crate directly.
mca-rs = "0.24.0"
