# MicroEpsilon capaNCDT6200 capacitive displacement sensor, ported from
# epics-modules/microEpsilon. Two independent asyn ports per physical unit:
# the config port (`capaNCDT6200.proto` StreamDevice commands, translated to
# a native asyn command table -- no StreamDevice engine in epics-rs 0.22.1)
# and the data port (`capaNCDT6200Sup.c`, a native C asyn driver ingesting a
# raw binary TCP measurement stream -- ported byte-for-byte).

[package]
name = "microepsilon"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
epics-rs = { workspace = true, features = ["asyn"] }
