# quadEM electrometer drivers (epics-modules/quadEM port).
#
# `drv_quad_em` is the shared base (parameter library, ring buffer, averaging,
# position computation, NDArray callbacks); one module per device sits on top.

[package]
name = "quadem"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
epics-rs = { workspace = true, features = ["asyn", "ad", "ioc"] }
# `ioc` is needed for `ad_core::ioc::{PluginManager, GenericDriverContext}`, which
# `iocsh::register_quadem_port` uses to publish a port's twelve NDArray fan-outs.
parking_lot = "0.12"
log = "0.4"
# The FX4 speaks JSON over a WebSocket (`FX4Src/drvFX4.cpp` uses ixwebsocket +
# nlohmann/json); tokio-tungstenite is the pure-Rust equivalent. Default
# features only: the meter's URI is `ws://`, so no TLS stack is pulled in.
tokio = { version = "1", features = ["rt", "net", "time", "sync", "macros"] }
tokio-tungstenite = "0.30"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
serde_json = "1"
