[package]
name = "microepsilon-ioc"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
microepsilon = { path = "../../drivers/microepsilon" }
epics-rs = { workspace = true, features = ["asyn", "bridge"] }
asyn-rs = { workspace = true, features = ["epics"] }
tokio = { version = "1", features = ["full"] }
