[package]
name = "usb-2408-ioc"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
usb-2408 = { path = "../../drivers/meascomp/usb-2408" }
epics-rs = { version = "0.19.2", features = ["asyn", "bridge"] }
asyn-rs = { version = "0.19.2", features = ["epics"] }
tokio = { version = "1", features = ["full"] }
