[package]
name = "usb-2408-ioc"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
usb-2408 = { path = "../../drivers/meascomp/usb-2408" }
epics-rs = { workspace = true, features = ["asyn", "bridge"] }
asyn-rs = { workspace = true, features = ["epics"] }
tokio = { version = "1", features = ["full"] }
