[package]
name = "usb-ctr-ioc"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
usb-ctr = { path = "../../drivers/meascomp/usb-ctr" }
epics-rs = { version = "0.19.2", features = ["asyn", "scaler", "bridge"] }
asyn-rs = { version = "0.19.2", features = ["epics"] }
tokio = { version = "1", features = ["full"] }
