[package]
name = "usb-ctr-ioc"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
usb-ctr = { path = "../../drivers/meascomp/usb-ctr" }
epics-rs = { workspace = true, features = ["asyn", "scaler", "bridge"] }
asyn-rs = { workspace = true, features = ["epics"] }
tokio = { version = "1", features = ["full"] }
