[package]
name = "timepix3"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
epics-rs = { workspace = true, features = ["asyn", "ad"] }
parking_lot = "0.12"
log = "0.4"
# nlohmann/json in the C driver.
serde_json = "1.0"
# cpr (libcurl) in the C driver. Serval speaks plain HTTP, so no TLS stack.
ureq = { version = "3.3", default-features = false }
# The background threads run on the ad-core runtime's tokio threads.
tokio = { version = "1", features = ["rt", "time", "macros"] }
