[package]
name = "ad-url"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
epics-rs = { workspace = true, features = ["asyn", "ad"] }
parking_lot = "0.12"
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
    "gif",
    "bmp",
    "tiff",
    "webp",
] }
ureq = { version = "2", default-features = false, features = ["tls"] }
anyhow = "1.0"
log = "0.4"

[dev-dependencies]
image = { version = "0.25", default-features = false, features = ["png", "tiff", "hdr"] }
